# azure-functions-container-mcp

./: .gitignore  build.sh  flake.nix  prek.toml  trivy-secret.yaml
app/: Dockerfile  function_app.py  host.json  pyproject.toml
infra/: README.md
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  variables.tf  version.tf
infra/modules/function_app_container/: .terraform.lock.hcl  main.tf  outputs.tf  tfvars.example  variables.tf
